# pastr

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  compose.dev.yml  dev.yaml  prod.yaml
.github/workflows/: ci.yml  docker.yml
migrations/: 20240322083642_create_pastr_schema.sql  20240322083646_create_users_table.sql  20240322135952_user_account_confirmation.sql
src/: auth.rs  config.rs  lib.rs  log.rs  mail.rs  main.rs  setup.rs
src/entity/: user.rs
src/routes/: hello_world.rs  index.rs  mod.rs
src/routes/api/: mod.rs
src/routes/api/user/: mod.rs  register.rs
src/routes/user/: activate.rs  get.rs  mod.rs  post.rs  register.rs
templates/: 404.html  activated.html  base.html  index.html  mail.html  register.html
