[package]
name = "pastr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.81"
argon2 = { version = "0.5.3", features = ["std"] }
config = { version = "0.14.0", default-features = false, features = ["yaml"] }
http = "1.1.0"
secrecy = { version = "0.8.0", features = ["serde"] }
sendgrid = "0.21.0"
serde = { version = "1.0.197", features = ["derive"] }
serde-aux = "4.5.0"
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.8.0", features = ["v4"] }
